--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:layout_width="180dp"
-    android:layout_height="200dp"
+    android:layout_height="190dp"
+    android:layout_margin="0dp"
+    android:scaleType="fitXY"
+    android:adjustViewBounds="true"
+
     android:id="@+id/list_images"/>
 
