--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="image_padding_left">20dp</dimen>
+    <dimen name="image_layout_width">175dp</dimen>
+    <dimen name="image_padding_up">10dp</dimen>
+    <dimen name="image_layout_height">200dp</dimen>
 </resources>
