--- a/app/src/main/res/layout/fragment_layout.xml
+++ b/app/src/main/res/layout/fragment_layout.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="MovieDetailsfragment">
 
 
-    <GridView
-        android:paddingTop="55dp"
-        android:id="@+id/list_view"
-        android:layout_height="match_parent"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/movie_recycler"
         android:layout_width="match_parent"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:horizontalSpacing="0dp"
-        android:verticalSpacing="0dp"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 
 
-    </GridView>
 
-</GridLayout>
+
+</FrameLayout>
